--- a/styles/style.css
+++ b/styles/style.css
@@ -7,12 +7,24 @@
 body{
     background-color: hsl(212, 45%, 89%);
 }
-
+/* .card-container style */
 .card-container{
     background-color: hsl(0, 0%, 100%);
-    height: 400px;
+    
     width: 300px;
     padding: 10px;
     margin: 100px auto;
     border-radius: 20px;
+}
+
+/* container-element style */
+.container-elements{
+    display: flex;
+    flex-direction: column;
+}
+
+.img-element{
+    border-radius: 10px;
+    max-width: 100%;
+    height: auto;
 }
