--- a/styles/style.css
+++ b/styles/style.css
@@ -28,3 +28,19 @@ body{
     max-width: 100%;
     height: auto;
 }
+
+.text-elements{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+    padding: 8px;
+    margin: 1rem 0rem;
+
+}
+
+h1{
+    margin: 10px auto;
+    font-size: 1.5rem;
+
+}
